# jobfinder

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/jobfinder/: __main__.py  config.py  digest.py  filters.py  notify.py  runner.py  scraper.py  store.py  tailor.py
src/jobfinder/resources/: resume-template.html
src/jobfinder/web/: app.py  deps.py  routes.py  scheduler.py
src/jobfinder/web/static/: style.css
src/jobfinder/web/templates/: _jobs_table.html  _resume_cell.html  _status_panel.html  base.html  config.html  jobs.html  status.html
systemd/: jobfinder.service  jobfinder.timer
tests/: test_config.py  test_digest.py  test_filters.py  test_notify.py  test_runner.py  test_scheduler.py  test_scraper.py  test_store.py  test_tailor.py  test_web.py
