[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jobfinder"
version = "0.1.0"
description = "Poll job boards and push alerts for postings matching your criteria"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Eric Schwimmer"}]
requires-python = ">=3.10"
dependencies = [
    "python-jobspy>=1.1.79",
    "requests>=2.31",
    "PyYAML>=6.0",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "anthropic>=0.80",
    "markdown>=3.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jobfinder = ["web/templates/*.html", "web/static/*", "resources/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
